--- a/src/markdown/mas/data_verkenning_2018_2022.Rmd
+++ b/src/markdown/mas/data_verkenning_2018_2022.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Verkenning MAS veldwerk data van 2018 tot en met 2022"
+title: "Verkenning MAS veldwerk data van 2018 tot en met 2023"
 author: "Ward Langeraert, Hans Van Calster"
 date: "`r Sys.Date()`"
 output:
@@ -61,7 +61,7 @@ source(here("src", "R", "wfs_wcs.R"))
 
 ```{r}
 data_path <- here("data", "processed")
-mas_data_df_raw <- read_csv(here(data_path, "MAS_data_full_2018_2022.csv"))
+mas_data_df_raw <- read_csv(here(data_path, "MAS_data_full_2018_2023.csv"))
 mas_data_df <- mas_data_df_raw %>%
   rename(openheid  = openheid_klasse_300) %>%
   mutate(stratum = paste0(openheid, "\n", sbp, " plan"))
@@ -394,7 +394,331 @@ relfreqs_z %>%
 ```
 
 
-# Resultaten vogels 2018--2022
+# Resultaten vogels 2023
+
+```{r selectie-vogels-2023}
+mas2023 <- mas_data_sf %>%
+  filter(soortgrp == 2,  # vogels
+         jaar == 2023,
+         openheid %in% c("HOL", "OL"))
+
+design2023 <- mas_data_df %>%
+  filter(jaar == 2023,
+         openheid %in% c("HOL", "OL")) %>%
+  distinct(plotnaam, regio, openheid, sbp)
+
+# To detect absences
+bezoekenlijst_2023 <- mas_data_df %>%
+  filter(jaar == 2023,
+         openheid %in% c("HOL", "OL")) %>%
+  distinct(plotnaam, regio, openheid, sbp, stratum, periode_in_jaar) %>%
+  select(plotnaam, periode_in_jaar, everything())
+```
+
+Selectie van vogelsoorten waargenomen in 2023 in HOL en OL.
+
+
+## Enkele cijfers
+
+```{r tabel-vogels-2023, message=FALSE}
+mas2023 %>%
+  st_drop_geometry() %>%
+  group_by(regio, openheid, sbp) %>%
+  summarise(aantal_waarnemingen = n_distinct(oid), 
+            aantal_plots = n_distinct(plotid), 
+            aantal_soorten = n_distinct(naam)) %>%
+  kable()
+
+mas2023 <- mas2023 %>% 
+  group_by(regio) %>%
+  mutate(plots_per_regio = n_distinct(plotid))
+```
+
+
+## Soortendiversiteit
+
+Is de soortendiversiteit in De Moeren hoger dan in de leemstreek?
+
+```{r soortendiversiteit-2023}
+diversiteit <- mas2023 %>%
+  st_drop_geometry() %>%
+  group_by(regio, plotnaam, openheid, sbp, stratum, periode_in_jaar, naam) %>%
+  summarise(totaal_aantal = sum(aantal),
+            .groups = "drop_last") %>%
+  summarise(aantal_soorten = n(),
+            .groups = "drop")
+```
+
+```{r soortenaantal-boxplot-2023}
+diversiteit %>%
+  ggplot() +
+    geom_boxplot(aes(x = stratum, y = aantal_soorten,
+                     fill = periode_in_jaar)) +
+    facet_wrap(~regio, scales = "free_x") +
+    labs(y = "Aantal soorten", x = "Stratum", fill = "Telperipode")
+```
+
+Om welke soorten gaat het?
+
+```{r relfreqs-vogels-2023}
+relfreqs <- mas2023 %>%
+  st_drop_geometry() %>%
+  group_by(regio, plotnaam, periode_in_jaar, naam) %>%
+  summarise(totaal_aantal = sum(aantal),
+            .groups = "drop") %>%
+  pivot_wider(names_from = naam,
+              values_from = totaal_aantal,
+              values_fill = list(totaal_aantal = 0)) %>%
+  group_by(periode_in_jaar, regio) %>%
+  summarise(across(.cols = where(~ is.numeric(.x) && min(.x) == 0),
+                   .fns = ~sum(.x > 0) / n()),
+                   .groups = "drop") %>%
+  pivot_longer(cols = where(is.double),
+               names_to = "naam",
+               values_to = "relfreq")
+```
+
+Overzicht van relatieve frequenties van de 30 meest frequente soorten in een bepaalde regio. Elk punt staat voor een relatieve frequentie in een bepaalde telperiode van 2023.
+
+```{r soortenfreqs-vogels-2023, fig.height = 200/25.4}
+relfreqs %>%
+  mutate(naam = reorder(naam, relfreq, FUN = "mean")) %>%
+  filter(as.numeric(naam) > length(unique(naam)) - 30) %>%
+  ggplot() +
+    labs(y = "", x = "Relatieve frequentie") +
+    geom_point(aes(x = relfreq, y = naam, colour = regio))
+```
+
+Top 20 van soorten die in termen van verschil in gemiddelde relatieve frequentie van voorkomen meer voorkomen in **De Moeren**:
+
+```{r meerfrequent-moeren-2023}
+relfreqs %>%
+  group_by(regio, naam) %>%
+  mutate(gemiddelde_freq = mean(relfreq)) %>%
+  distinct(regio, naam, gemiddelde_freq) %>%
+  pivot_wider(names_from = regio,
+              values_from = gemiddelde_freq,
+              values_fill = 0) %>%
+  mutate(verschilfreq = `De Moeren` - `Oostelijke leemstreek`) %>%
+  ungroup() %>%
+  slice_max(verschilfreq, n = 20) %>%
+  kable(digits = 2)
+```
+
+Top 20 van soorten die in termen van verschil in gemiddelde relatieve frequentie van voorkomen meer voorkomen in de **Oostelijke Leemstreek**:
+
+```{r meerfrequent-leemstreek-2023}
+relfreqs %>%
+  group_by(regio, naam) %>%
+  mutate(gemiddelde_freq = mean(relfreq)) %>%
+  distinct(regio, naam, gemiddelde_freq) %>%
+  pivot_wider(names_from = regio,
+              values_from = gemiddelde_freq,
+              values_fill = 0) %>%
+  mutate(verschilfreq = `De Moeren` - `Oostelijke leemstreek`) %>%
+  ungroup() %>%
+  slice_max(-verschilfreq, n = 20) %>%
+  kable(digits = 2)
+```
+
+
+## Doelsoorten
+
+```{r selectie-doelsoorten-2023}
+doelsoorten <- c("Veldleeuwerik", "Gele Kwikstaart", "Geelgors", "Fazant")
+doel_df <- mas2023 %>% 
+  filter(naam %in% doelsoorten, 
+         wrntype > 0L) 
+```
+
+Enkel data met broedcode > 0 zijn weerhouden in HOL en OL. De relatieve frequenties zullen dus niet exact hetzelfde zijn als in **2.2**.
+
+<!--Opgepast: verwarrend is dat het veld broedcode niet de broedcode bevat. Hiervoor moet je het veld `wrntype` hebben. In De Moeren is geen half-open landschap aanwezig (NA).-->
+
+```{r diversiteit-doelsoorten-2023}
+relfreqs_doel <- doel_df %>% 
+  st_drop_geometry() %>%
+  group_by(regio, plotnaam, stratum, openheid, sbp, periode_in_jaar, naam) %>%
+  summarise(totaal_aantal = sum(aantal),
+            .groups = "drop") %>%
+  pivot_wider(names_from = naam,
+              values_from = totaal_aantal,
+              values_fill = list(totaal_aantal = 0)) %>%
+  group_by(periode_in_jaar, regio, stratum, openheid, sbp) %>%
+  summarise(across(.cols = where(~ is.numeric(.x) && min(.x) == 0),
+                   .fns = ~sum(.x > 0) / n()),
+                   .groups = "drop") %>%
+  pivot_longer(cols = where(is.double),
+               names_to = "naam",
+               values_to = "relfreq")
+
+relfreqs_doel %>%
+  group_by(regio, stratum, openheid, sbp, naam) %>%
+  mutate(gemiddelde_freq = mean(relfreq)) %>%
+  distinct(regio, stratum, openheid, sbp, naam, gemiddelde_freq) %>%
+  pivot_wider(names_from = regio,
+              values_from = gemiddelde_freq) %>%
+  mutate(verschilfreq = `De Moeren` - `Oostelijke leemstreek`) %>%
+  group_by(openheid, sbp) %>%
+  arrange(naam) %>%
+  select(-stratum) %>%
+  kable(digits = 2)
+```
+
+De volgende figuur geeft een overzicht van de genoteerde broedcodes per regio voor elke soort. Een telling is hier geïnterpreteerd als een waarneming van een bepaalde soort op een bepaalde afstand in een bepaalde plot in een bepaalde telperiode. Er is dus geen rekening gehouden met het aantal vogels genoteerd per telling. De tellingen zijn hoger in de Leemstreek maar daar waren ook meer plots. Deze figuur geeft dus enkel de absolute aantallen weer. 
+
+```{r broedcodes-doelsoorten-2023, message=FALSE, fig.height=7, fig.width=9}
+# Save totals to put labels on plot
+totals <- doel_df %>%
+    st_drop_geometry() %>%
+    group_by(naam, stratum, regio) %>%
+    summarise(total = n(), .groups = "drop")
+
+# summarise data and make plot
+doel_df %>% 
+  st_drop_geometry() %>%
+  mutate(wrntype_omschrijving2 = paste(wrntype, wrntype_omschrijving, 
+                                       sep = ": ")) %>%
+  group_by(naam, stratum, regio, wrntype_omschrijving2) %>%
+  summarise(N = n(), .groups = "drop") %>%
+  ggplot(aes(x = stratum, y = N, fill = wrntype_omschrijving2)) +
+    geom_bar(stat = "identity", colour = "black") +
+    geom_text(data = totals, aes(x = stratum, 
+                                 y = total + c(rep(30, 17), rep(125, 6)),
+                                 label = total, fill = NULL)) +
+    labs(y = "Aantal tellingen", x = "") +
+    guides(fill = guide_legend(title = "broedcode")) +
+    facet_grid(naam~regio, scales = "free") 
+```
+
+De volgende figuur toont de relatieve frequentie van de doelsoorten in een bepaalde telperiode voor de verschillende regio's gestratificeerd volgens openheid van het landschap en binnen of buiten sbp's. 
+
+```{r telperiode-doelsoorten-2023, message=FALSE}
+relfreqs_doel %>%
+  ggplot() +
+    labs(y = "Relatieve frequentie", x = "Telperiode") +
+    geom_point(aes(x = periode_in_jaar, y = relfreq,
+                   colour = openheid, shape = sbp)) +
+    facet_grid(naam~regio) +
+    scale_y_continuous(limits = c(0, 1))
+```
+
+Voor de Torenvalk wordt geen rekening gehouden met broedcodes. Alle waarnemingen zijn relevant o.w.v. terreingebruik. De relatieve frequentie is dus identiek als in **2.2**.
+
+```{r relfreq-torenvalk-2023, message=FALSE}
+relfreq_torenvalk <- mas2023 %>%
+  st_drop_geometry() %>%
+  filter(naam == "Torenvalk") %>%
+  group_by(regio, plotnaam, stratum, openheid, sbp, periode_in_jaar, naam) %>%
+  summarise(totaal_aantal = sum(aantal),
+            .groups = "drop") %>%
+  full_join(bezoekenlijst_2023, 
+            by = join_by(regio, plotnaam, stratum, openheid, sbp,
+                         periode_in_jaar)) %>%
+  mutate(totaal_aantal = ifelse(is.na(totaal_aantal), 0, totaal_aantal)) %>%
+  group_by(periode_in_jaar, regio, stratum, openheid, sbp) %>%
+  summarise(relfreq = sum(totaal_aantal > 0) / n(),
+                   .groups = "drop")
+```
+
+```{r freq-torenvalk-2023}
+relfreq_torenvalk %>%
+  group_by(regio, openheid, sbp) %>%
+  mutate(gemiddelde_freq = mean(relfreq)) %>%
+  distinct(regio, openheid, sbp, gemiddelde_freq) %>%
+  pivot_wider(names_from = regio,
+              values_from = gemiddelde_freq) %>%
+  mutate(verschilfreq = `De Moeren` - `Oostelijke leemstreek`) %>%
+  ungroup() %>%
+  kable(digits = 2)
+```
+
+De volgende figuur toont de relative frequentie van de soort in een bepaalde telperiode voor de verschillende regio's en strata.
+
+```{r telperiode-torenvalk-2023, message=FALSE}
+relfreq_torenvalk %>%
+  ggplot() +
+    labs(y = "Relatieve frequentie", x = "Telperiode") +
+    geom_point(aes(x = periode_in_jaar, y = relfreq,
+                   colour = openheid, shape = sbp)) +
+    facet_wrap(~regio) +
+    scale_y_continuous(limits = c(0, 1))
+```
+
+
+# Resultaten zoogdieren 2023
+
+```{r selectie-zoogdieren-2023}
+zoogdieren <- mas_data_sf %>%
+  filter(soortgrp == 1,                # zoogdieren
+         jaar == 2023,                 # 2023
+         openheid %in% c("HOL", "OL"))
+```
+
+Selectie van zoogdieren waargenomen in 2023 in HOL en OL.
+
+## Enkele cijfers
+
+```{r tabel-zoogdieren-2023}
+zoogdieren %>%
+  st_drop_geometry() %>% 
+  group_by(regio) %>%
+  summarise(aantal_waarnemingen = n_distinct(oid), 
+            aantal_plots = n_distinct(plotid), 
+            aantal_soorten = n_distinct(naam)) %>%
+  kable()
+```
+
+
+## Soortendiversiteit
+
+```{r relfreqs-zoogdieren-2023}
+relfreqs_z <- zoogdieren %>%
+  st_drop_geometry() %>%
+  group_by(regio, plotnaam, periode_in_jaar, naam) %>%
+  summarise(totaal_aantal = sum(aantal),
+            .groups = "drop") %>%
+  pivot_wider(names_from = naam,
+              values_from = totaal_aantal,
+              values_fill = list(totaal_aantal = 0)) %>%
+  group_by(periode_in_jaar, regio) %>%
+  summarise(across(.cols = where(~ is.numeric(.x) && min(.x) == 0),
+                   .fns = ~sum(.x > 0) / n()),
+                   .groups = "drop") %>%
+  pivot_longer(cols = where(is.double),
+               names_to = "naam",
+               values_to = "relfreq")
+```
+
+Overzicht van relatieve frequenties van de zoogdieren in een bepaalde regio. Elk punt staat voor een relatieve frequentie in een bepaalde telperiode van 2023. De frequenties zijn relatief ten opzichte van de andere zoogdieren. Als er een zoogdier wordt gezien, is dit vaak de Haas.
+
+```{r soortenfreqs-zoogdieren-2023}
+relfreqs_z %>%
+  mutate(naam = reorder(naam, relfreq, FUN = "mean")) %>%
+  ggplot() +
+    labs(y = "", x = "Relatieve frequentie") +
+    geom_point(aes(x = relfreq, y = naam, colour = regio))
+```
+
+```{r freqtable-zoogdieren-2023}
+relfreqs_z %>%
+  group_by(regio, naam) %>%
+  mutate(gemiddelde_freq = mean(relfreq)) %>%
+  distinct(regio, naam, gemiddelde_freq) %>%
+  pivot_wider(names_from = regio,
+              values_from = gemiddelde_freq,
+              values_fill = 0) %>%
+  mutate(verschilfreq = `De Moeren` - `Oostelijke leemstreek`) %>%
+  ungroup() %>%
+  # Same order as in the previous plot
+  rowwise() %>%
+  mutate(max = max(`De Moeren`, `Oostelijke leemstreek`)) %>%
+  arrange(desc(max)) %>% select(-max) %>%
+  kable(digits = 3)
+```
+
+
+# Resultaten vogels 2018--2023
 
 ```{r selectie-vogels-langetermijn}
 mas_vogels <- mas_data_sf %>%
@@ -843,7 +1167,7 @@ opp_evolutie <- bo_dm_ol %>%
 
 De volgende figuur geeft de cumulatieve oppervlakte aan afgesloten beheerovereenkomsten voor de verschillende soortbeschermingsmaatregelen over de jaren en opgesplitst per stratum.
 Deze cijfers gelden voor het volledige projectgebied van de Moeren en de Oostelijke leemstreek zoals gedefinieerd in het MAS pilootproject.
-De data voor 2022 zitten hier nog niet bij.
+De data voor 2022-2023 zitten hier nog niet bij.
 
 ```{r opp-bo-evolutie, out.width="100%"}
 opp_evolutie %>%
